# fastapi_demo

./: README.md  kfold.ipynb  main.py  model.pickle  pyproject.toml
